1.3测试准备